fix: group config modal overflow

--- a/src/pages/Group/GroupConfig/GroupConfigModal.css
+++ b/src/pages/Group/GroupConfig/GroupConfigModal.css
@@ -23,6 +23,8 @@
     border-radius: var(--border-radius) var(--border-radius) var(--border-radius) var(--border-radius);
     border: 1px solid var(--primary-color);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
+    overflow: auto;
   }
 
   .title {
